<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/menu_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_week"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/menu_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/menu_all_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_actions"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>