<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/frequency_once"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/frequency_once"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/frequency_multiple_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/frequency_multiple_times"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/frequency_fixed_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/frequency_fixed_time"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>